--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -58,10 +58,14 @@ jobs:
 
     - name: 5. Check service health
       run: |
+        echo "Checking postgres..."
+        # Wait for postgres to be ready
+        docker compose --env-file .env exec -T postgres \
+          bash -c 'until pg_isready -U $POSTGRES_USER -d $POSTGRES_DB; do sleep 5; done'
+
         echo "Checking server API..."
-        # Wait for the server to be ready by curling its API
         docker compose --env-file .env exec -T server \
-          bash -c 'apt-get update > /dev/null && apt-get install -y curl > /dev/null && \
+          sh -c 'apk add --no-cache curl && \
           echo "Waiting for server..." && \
           curl -f --retry 12 --retry-delay 10 --retry-connrefused http://server:5000/api/v3/participationInit'
         
