--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -67,7 +67,9 @@ jobs:
     - name: Build Docker images
       run: |
         # Build all services defined in test compose file
-        docker compose -f docker-compose.test.yml --env-file test.env build
+        # Pass IS_GITHUB_ACTION=true to build the smaller, CPU-only delphi image
+        docker compose -f docker-compose.test.yml --env-file test.env build \
+          --build-arg IS_GITHUB_ACTION=true
 
     - name: Start services
       run: |
