--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -98,6 +98,7 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         coverageFile: coverage.xml
+        sourceDir: delphi
 
     - name: 9. Show service logs on failure
       if: failure()
