fix actions syntax

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -66,6 +66,8 @@ jobs:
         echo "Copying test files into container..."
         docker compose -f docker-compose.test.yml cp delphi/tests delphi:/app/tests
         docker compose -f docker-compose.test.yml cp delphi/real_data delphi:/app/real_data
+        echo "Copying .coveragerc into container..."
+        docker compose -f docker-compose.test.yml cp .coveragerc delphi:/app/.coveragerc
 
         echo "Running tests..."
         docker compose \
@@ -83,7 +85,6 @@ jobs:
             echo '--- Installing Pytest & Coverage ---'; \
             pip install pytest pytest-cov; \
             echo '--- Running Pytest ---'; \
-            export PYTHONPATH=\$PYTHONPATH:/app; \
             pytest --cov=polismath /app/tests \
           "
 
