one more ocnfig update

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -82,10 +82,9 @@ jobs:
             python create_dynamodb_tables.py --region us-east-1; \
             echo '--- Installing Pytest & Coverage ---'; \
             pip install pytest pytest-cov; \
-            echo -e \"[run]\nrelative_files = true\" > /app/.coveragerc; \
             echo '--- Running Pytest ---'; \
             export PYTHONPATH=\$PYTHONPATH:/app; \
-            pytest --cov=polismath --cov-config=/app/.coveragerc /app/tests \
+            pytest --cov=polismath /app/tests \
           "
 
     - name: 7. Copy coverage report from container
@@ -103,8 +102,10 @@ jobs:
         echo "" >> .coveragerc
         echo "[paths]" >> .coveragerc
         echo "source =" >> .coveragerc
-        echo "    /app" >> .coveragerc
-        echo "    delphi" >> .coveragerc
+        echo "    polismath" >> .coveragerc
+        echo "    delphi/polismath" >> .coveragerc
+        echo "    umap_narrative" >> .coveragerc
+        echo "    delphi/umap_narrative" >> .coveragerc
 
     - name: 8. Python Coverage Comment
       if: success() && github.event_name == 'pull_request'
