--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -63,11 +63,13 @@ jobs:
 
     - name: 6. Run Delphi Pytest
       run: |
+    - name: 6. Run Delphi Pytest and Generate Coverage Comment
+      run: |
         echo "Copying test files into container..."
         docker compose -f docker-compose.test.yml cp delphi/tests delphi:/app/tests
         docker compose -f docker-compose.test.yml cp delphi/real_data delphi:/app/real_data
 
-        echo "Running tests..."
+        echo "Running tests and generating coverage report..."
         docker compose \
           -f docker-compose.test.yml \
           --env-file .env \
@@ -80,38 +82,36 @@ jobs:
           bash -c " \
             echo '--- Setting up DynamoDB Tables ---'; \
             python create_dynamodb_tables.py --region us-east-1; \
-            echo '--- Installing Pytest & Coverage ---'; \
-            pip install pytest pytest-cov; \
+            echo '--- Installing Pytest & Coverage tools ---'; \
+            pip install pytest pytest-cov coverage-comment; \
             echo '--- Running Pytest ---'; \
             export PYTHONPATH=\$PYTHONPATH:/app; \
-            pytest --cov=polismath /app/tests \
+            pytest --cov=polismath --cov-report=xml:/app/coverage.xml /app/tests; \
+            echo '--- Generating Coverage Comment Text ---'; \
+            coverage-comment --coverage-file /app/coverage.xml > /app/coverage-comment.txt \
           "
 
-    - name: 7. Copy coverage report from container
-      if: success()
-      run: |
-        # Copy the .coverage file, not coverage.xml
-        echo "Copying .coverage file from delphi container..."
-        docker compose -f docker-compose.test.yml cp delphi:/app/.coverage .
-
-    - name: Create .coveragerc for Coverage Action
-      if: success() # Only run this step if tests succeed
-      run: |
-        echo "[run]" > .coveragerc
-        echo "source = delphi" >> .coveragerc
-        echo "" >> .coveragerc
-        echo "[paths]" >> .coveragerc
-        echo "source =" >> .coveragerc
-        echo "    polismath" >> .coveragerc
-        echo "    delphi/polismath" >> .coveragerc
-        echo "    umap_narrative" >> .coveragerc
-        echo "    delphi/umap_narrative" >> .coveragerc
-
-    - name: 8. Python Coverage Comment
+    - name: 7. Copy coverage comment from container
       if: success() && github.event_name == 'pull_request'
-      uses: py-cov-action/python-coverage-comment-action@v3
+      run: |
+        echo "Copying coverage-comment.txt file from delphi container..."
+        docker compose -f docker-compose.test.yml cp delphi:/app/coverage-comment.txt ./coverage-comment.txt
+
+    - name: 8. Post Coverage Comment
+      if: success() && github.event_name == 'pull_request'
+      uses: actions/github-script@v6
       with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const fs = require('fs');
+          const commentBody = fs.readFileSync('coverage-comment.txt', 'utf8');
+          
+          github.rest.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: commentBody
+          });
 
     - name: 9. Show service logs on failure
       if: failure()
