move script into container

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -68,6 +68,8 @@ jobs:
         docker compose -f docker-compose.test.yml cp delphi/real_data delphi:/app/real_data
         echo "Copying coverage script into container..."
         docker compose -f docker-compose.test.yml cp delphi/generate_coverage_md.py delphi:/app/generate_coverage_md.py
+        echo "Copying script to be tested into container..."
+        docker compose -f docker-compose.test.yml cp delphi/run_math_pipeline.py delphi:/app/run_math_pipeline.py
 
         echo "Running tests and generating coverage report..."
         docker compose \
@@ -87,7 +89,7 @@ jobs:
             pip install pytest pytest-cov coverage; \
             echo '--- Running Pytest ---'; \
             export PYTHONPATH=\$PYTHONPATH:/app; \
-            pytest --cov=polismath --cov-report=xml:/app/coverage.xml /app/tests; \
+            pytest --cov=polismath --cov=run_math_pipeline --cov-report=xml:/app/coverage.xml /app/tests; \
             echo '--- Generating Coverage Comment Text ---'; \
             python /app/generate_coverage_md.py > /app/coverage-comment.md \
           "
